raw/issue-32278-big-array-of-strings--2016-11-09-12-29-18--0.log
commit bca365e688f0424fb99d38d477a9b7863bb070d3
Merge: 02aa428 a449bdb
Author: bors <bors@rust-lang.org>
Date:   Wed Nov 9 08:51:23 2016 -0800

    Auto merge of #36520 - estebank:dataless-enum, r=brson
    
    Reword error when data-less enum variant called as function
    
    Given a file like:
    
    ``` rust
    enum Test {
        Variant,
        Variant2 {a: u32},
    }
    
    fn main(){
        let x = Test::Variant("Hello");
        let y = Test::Variant2("World");
    }
    ```
    
    Both errors now look similar:
    
    ``` bash
    error[E0423]: `Test::Variant2` is the name of a struct or struct variant, but this expression uses it like a function name
      --> file3.rs:10:13
       |
    10 |     let y = Test::Variant2("Hello");
       |             ^^^^^^^^^^^^^^ struct called like a function
       |
       = help: did you mean to write: `Test::Variant2 { /* fields */ }`?
    
    error: `Test::Variant` is the name of a data-less enum, but this expression uses it like a function name
     --> file3.rs:9:13
      |
    9 |     let x = Test::Variant("World");
      |             ^^^^^^^^^^^^^^^^^^^^^^ data-less enum called like a function
      |
      = help: did you mean to write: `Test::Variant`?
    note: defined here
     --> file3.rs:2:5
      |
    2 |     Variant,
      |     ^^^^^^^
    
    error: aborting due to previous error
    ```
    
    Re: #28533
rustc: ./issue-32278-big-array-of-strings
cargo rustc -- -Ztime-passes -Zinput-stats
   Compiling issue-32278-big-array-of-strings v0.1.0 (file:///root/benchmarks/issue-32278-big-array-of-strings)
time: 0.112; rss: 60MB	parsing
Lines of code:             65577
Pre-expansion node count:  65552
time: 0.000; rss: 60MB	recursion limit
time: 0.000; rss: 60MB	crate injection
time: 0.000; rss: 60MB	plugin loading
time: 0.000; rss: 60MB	plugin registration
time: 0.025; rss: 88MB	expansion
time: 0.000; rss: 88MB	maybe building test harness
time: 0.001; rss: 88MB	maybe creating a macro crate
Post-expansion node count: 65565
time: 0.000; rss: 88MB	checking for inline asm in case the target doesn't support it
time: 0.000; rss: 88MB	complete gated feature checking
time: 0.005; rss: 88MB	early lint checks
time: 0.000; rss: 88MB	AST validation
time: 0.003; rss: 88MB	name resolution
time: 0.005; rss: 95MB	lowering ast -> hir
time: 0.001; rss: 100MB	indexing hir
time: 0.000; rss: 100MB	attribute checking
time: 0.000; rss: 88MB	language item collection
time: 0.000; rss: 88MB	lifetime resolution
time: 0.000; rss: 88MB	looking for entry point
time: 0.000; rss: 88MB	looking for plugin registrar
time: 0.009; rss: 94MB	region resolution
time: 0.000; rss: 94MB	loop checking
time: 0.001; rss: 94MB	static item recursion checking
time: 0.020; rss: 94MB	compute_incremental_hashes_map
time: 0.000; rss: 94MB	load_dep_graph
time: 0.000; rss: 94MB	type collecting
time: 0.000; rss: 94MB	variance inference
time: 0.005; rss: 96MB	coherence checking
time: 0.000; rss: 97MB	wf checking
time: 0.599; rss: 109MB	item-types checking
time: 0.000; rss: 109MB	item-bodies checking
time: 0.000; rss: 109MB	drop-impl checking
time: 0.021; rss: 108MB	const checking
time: 0.001; rss: 108MB	privacy checking
time: 0.000; rss: 108MB	stability index
time: 0.000; rss: 108MB	intrinsic checking
time: 0.000; rss: 108MB	effect checking
time: 0.000; rss: 108MB	match checking
time: 0.000; rss: 108MB	liveness checking
time: 0.000; rss: 108MB	rvalue checking
time: 0.042; rss: 113MB	MIR dump
  time: 0.000; rss: 113MB	SimplifyCfg
  time: 0.001; rss: 113MB	QualifyAndPromoteConstants
  time: 0.000; rss: 113MB	TypeckMir
  time: 0.000; rss: 113MB	SimplifyBranches
  time: 0.000; rss: 113MB	SimplifyCfg
time: 0.002; rss: 113MB	MIR cleanup and validation
time: 0.001; rss: 113MB	borrow checking
time: 0.000; rss: 113MB	reachability checking
time: 0.000; rss: 113MB	death checking
time: 0.000; rss: 113MB	stability checking
time: 0.000; rss: 113MB	unused lib feature checking
time: 0.023; rss: 113MB	lint checking
time: 0.001; rss: 113MB	resolving dependency formats
  time: 0.000; rss: 113MB	NoLandingPads
  time: 0.000; rss: 113MB	SimplifyCfg
  time: 0.001; rss: 113MB	EraseRegions
  time: 0.000; rss: 113MB	AddCallGuards
  time: 0.000; rss: 113MB	ElaborateDrops
  time: 0.000; rss: 113MB	NoLandingPads
  time: 0.000; rss: 113MB	SimplifyCfg
  time: 0.000; rss: 113MB	InstCombine
  time: 0.000; rss: 113MB	Deaggregator
  time: 0.000; rss: 113MB	CopyPropagation
  time: 0.000; rss: 113MB	SimplifyLocals
  time: 0.000; rss: 113MB	AddCallGuards
  time: 0.000; rss: 113MB	PreTrans
time: 0.001; rss: 113MB	MIR optimisations
  time: 0.000; rss: 113MB	write metadata
  time: 0.001; rss: 113MB	translation item collection
  time: 0.000; rss: 113MB	codegen unit partitioning
  time: 0.001; rss: 126MB	internalize symbols
time: 0.054; rss: 126MB	translation
time: 0.000; rss: 126MB	assert dep graph
time: 0.000; rss: 126MB	serialize dep graph
  time: 0.008; rss: 87MB	llvm function passes [0]
  time: 0.000; rss: 87MB	llvm module passes [0]
  time: 0.174; rss: 86MB	codegen passes [0]
  time: 0.000; rss: 86MB	codegen passes [0]
time: 0.184; rss: 86MB	LLVM passes
time: 0.000; rss: 86MB	serialize work products
  time: 0.151; rss: 76MB	running linker
time: 0.153; rss: 76MB	linking
done
